[gd_scene load_steps=7 format=1]

[ext_resource path="res://pong.gd" type="Script" id=1]
[ext_resource path="res://left_pallete.png" type="Texture" id=2]
[ext_resource path="res://right_pallete.png" type="Texture" id=3]
[ext_resource path="res://separator.png" type="Texture" id=4]
[ext_resource path="res://ball.png" type="Texture" id=5]
[ext_resource path="res://square.png" type="Texture" id=6]

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="left" type="Sprite" parent="."]

transform/pos = Vector2( 67, 183 )
texture = ExtResource( 2 )

[node name="right" type="Sprite" parent="."]

transform/pos = Vector2( 577, 187 )
texture = ExtResource( 3 )

[node name="separator" type="Sprite" parent="."]

transform/pos = Vector2( 320, 200 )
texture = ExtResource( 4 )

[node name="ball" type="Sprite" parent="."]

transform/pos = Vector2( 320, 188 )
texture = ExtResource( 5 )

[node name="right_life_1" type="Sprite" parent="."]

transform/pos = Vector2( 620, 20 )
texture = ExtResource( 5 )

[node name="right_life_2" type="Sprite" parent="."]

transform/pos = Vector2( 600, 20 )
texture = ExtResource( 5 )

[node name="right_life_3" type="Sprite" parent="."]

transform/pos = Vector2( 580, 20 )
texture = ExtResource( 5 )

[node name="left_life_1" type="Sprite" parent="."]

transform/pos = Vector2( 20, 20 )
texture = ExtResource( 5 )

[node name="left_life_2" type="Sprite" parent="."]

transform/pos = Vector2( 40, 20 )
texture = ExtResource( 5 )

[node name="left_life_3" type="Sprite" parent="."]

transform/pos = Vector2( 60, 20 )
texture = ExtResource( 5 )

[node name="power_up" type="Sprite" parent="."]

texture = ExtResource( 6 )


